<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.6</version>
        <relativePath/>
    </parent>

    <groupId>com.stayhub</groupId>
    <artifactId>stayhub-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>StayHub - Hotel Reservation System</name>
    <description>Multi-module hotel reservation system — Stage 1 of 4</description>

    <modules>
        <module>stayhub-common</module>
        <module>stayhub-user</module>
        <module>stayhub-property</module>
        <module>stayhub-booking</module>
        <module>stayhub-notification</module>
        <module>stayhub-api</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Internal modules -->
            <dependency>
                <groupId>com.stayhub</groupId>
                <artifactId>stayhub-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.stayhub</groupId>
                <artifactId>stayhub-user</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.stayhub</groupId>
                <artifactId>stayhub-property</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.stayhub</groupId>
                <artifactId>stayhub-booking</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.stayhub</groupId>
                <artifactId>stayhub-notification</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!-- Lombok — managed here so all modules pick up the same version -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <optional>true</optional>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>21</source>
                        <target>21</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
